--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <section id="home">
         <div class="title">
-            <h1 id="username">I'm IRON <span id="name">MAN</span>
+            <h1 id="username">I'm IRONman <span id="name">MAN</span>
             </h1>
             <p id="user-details">
                 this my personal portfolio to explain 
